# vibrant-vision-AI

./: .gitignore  README.md  de_flicker.py  main.py  plan.txt  pyproject.toml
vibrant_vision/general/: logging.py
vibrant_vision/sd/: Maestro.py  constants.py
vibrant_vision/sd/animation/: blending.py  keyframes.py  movie.py  py3d_tools.py  wrap.py
vibrant_vision/sd/animation/rife/: IFNet.py  IFNet_2R.py  IFNet_HDv3_v4_6.py  IFNet_m.py  RIFE.py  RIFE_HDv3.py  refine.py  refine_2R.py
vibrant_vision/sd/models/: DepthModel.py  ImageModel.py  Model.py  pipeline.py  utils.py
