[tool.poetry]
name = "vibrant vision AI"
version = "1.0.0"
description = ""
authors = ["Fagenorn <anisanissakkaf@gmail.com>"]
packages = [{ include = "vibrant_vision" }]

[tool.poetry.dependencies]
python = ">=3.10.7,<3.11"
torch = "1.13.1+cu116"
torchvision = "0.14.1+cu116"
torchaudio = "0.13.1+cu116"
diffusers = {extras = ["torch"], version = "^0.13.1"}
transformers = "^4.26.1"
xformers = "^0.0.16"
pandas = "^1.5.3"
numpy = "^1.24.2"
einops = "^0.6.0"
opencv-python = "^4.7.0.68"
scikit-image = "^0.19.3"
lpips = "^0.1.4"
ffmpeg-python = "^0.2.0"
omegaconf = "^2.3.0"
safetensors = "^0.2.8"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
poethepoet = "^0.18.1"

[tool.poe.tasks]
format = "black ."
torch-install = "python -m pip install torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1+cu116 -f https://download.pytorch.org/whl/torch_stable.html"
start = "poetry run python main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
